@@ -5,6 +5,7 @@
 #include "config.h"
 
 #include <sys/types.h>
+#include <sys/socket.h>
 #include <sys/wait.h>
 #include <sys/stat.h>
 #include <sys/time.h>
@@ -1145,6 +1146,14 @@ f_data( struct receive_data *r )
 	clock = time( &clock );
 	tm = localtime( &clock );
 	strftime( daytime, sizeof( daytime ), "%e %b %Y %T", tm );
+
+	if ( setsockopt( snet_fd( r->r_snet ), SOL_SOCKET, SO_RCVBUF,
+		(void*)&simta_smtp_rcvbuf_max, sizeof( int )) < 0 ) {
+	    syslog( LOG_ERR, "f_data setsockopt: %m" );
+	    goto error;
+	}
+	syslog( LOG_DEBUG, "f_data: TCP window size increased from %d to %d",
+		simta_smtp_rcvbuf_min, simta_smtp_rcvbuf_max );
 
 	/*
 	 * At this point, we must have decided what we'll put in the Received:
