@@ -241,6 +241,12 @@
 #
 #MAX_MESSAGE_SIZE		0
 
+# Throttle the RCVBUF TCP window size to a small size initially, but increase
+# it if a successful DATA segment is reached.  If the second number is not
+# defined or is 0, it defaults to what getsockopt() thinks the default is.
+#
+#SMTP_RCVBUF			50			0
+
 # Set maximum number of failed Rcpt to's for an inbound SMTP client.
 # Default is 0, or unlimited.
 #
